--- a/sandbox/ocsp-perf-test/pom.xml
+++ b/sandbox/ocsp-perf-test/pom.xml
@@ -4,7 +4,7 @@
 	<name>FedICT OCSP Performance Test Project</name>
 	<groupId>be.fedict</groupId>
 	<artifactId>ocsp-perf-test</artifactId>
-	<version>0.1.0</version>
+	<version>0.2.0-SNAPSHOT</version>
 	<packaging>jar</packaging>
 	<inceptionYear>2012</inceptionYear>
 	<licenses>
@@ -18,7 +18,7 @@
 		<url>http://www.fedict.belgium.be/</url>
 	</organization>
 	<scm>
-		<developerConnection>scm:svn:https://eid-trust-service.googlecode.com/svn/tags/ocsp-perf-test-0.1.0</developerConnection>
+		<developerConnection>scm:svn:https://eid-trust-service.googlecode.com/svn/sandbox/ocsp-perf-test</developerConnection>
 	</scm>
 	<dependencies>
 		<dependency>
