[maven-release-plugin] prepare release ocsp-perf-test-0.2.0

--- a/sandbox/ocsp-perf-test/pom.xml
+++ b/sandbox/ocsp-perf-test/pom.xml
@@ -1,11 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<name>FedICT OCSP Performance Test Project</name>
 	<groupId>be.fedict</groupId>
 	<artifactId>ocsp-perf-test</artifactId>
-	<version>0.2.0-SNAPSHOT</version>
+	<version>0.2.0</version>
 	<packaging>jar</packaging>
 	<inceptionYear>2012</inceptionYear>
 	<licenses>
@@ -19,7 +18,7 @@
 		<url>http://www.fedict.belgium.be/</url>
 	</organization>
 	<scm>
-		<developerConnection>scm:svn:https://eid-trust-service.googlecode.com/svn/sandbox/ocsp-perf-test</developerConnection>
+		<developerConnection>scm:svn:https://eid-trust-service.googlecode.com/svn/tags/ocsp-perf-test-0.2.0</developerConnection>
 	</scm>
 	<dependencies>
 		<dependency>
